<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp2</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send message to new activity</string>
    <string name="start_activity1">Start fragment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="color_send">Set backgroundcolor and vibrate!</string>
    <string name="color_promt">Choose a color</string>
    <string name="start_fragment">Start fragment</string>
    <string name="landscape_message">This is Landscape mode fragment</string>
    <string name="portrait_message">This is Portrait mode fragment</string>
    <string name="fragment_desc">Fragment Background</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="last_fragment_msg_horizontal">This is the last fragment in portrait view</string>
    <string name="last_fragment_msg_portrait">This is the last fragment in horizontal view</string>
    <string name="start_camera">Launch Camera</string>
    <string name="your_image">Here is your image:</string>
    <string name="camera_textView">Tap the image to open your camera.</string>
    <string name="notify_btn">Notify me!</string>

    <string-array name="color_array">
        <item>Green</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Default</item>
    </string-array>

    <string name="title_activity_lm__fragment">LM_Fragment</string>
    <string name="title_activity_pm__fragment">PM_Fragment</string>
    <string name="title_activity_activity1">FragmentActivity</string>
    <string name="title_activity_final_fragment">FinalFragmentActivity</string>
    <string name="title_activity_lm__fragment_final">LM_FragmentFinal</string>
    <string name="title_activity_last__lm__fragment">Last_LM_Fragment</string>
    <string name="title_activity_last_fragment">LastFragmentActivity</string>
    <string name="title_activity_lm__last_fragment">LM_LastFragment</string>
    <string name="title_activity_pm__last_fragment">PM_LastFragment</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>
